WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90974
[BlackBerry] Some small changes in network code
https://bugs.webkit.org/show_bug.cgi?id=90974
Summary
[BlackBerry] Some small changes in network code
Mary Wu
Reported
2012-07-11 04:49:44 PDT
Add some change in Network, from RIM PR# 171555. 1. Set status when NetworkJob closed so that its wrapped stream can also query the result after NetworkJob handling redirect/authenticate etc. 2. pass download attribute to NetworkRequest.
Attachments
Patch
(2.59 KB, patch)
2012-07-11 04:59 PDT
,
Mary Wu
no flags
Details
Formatted Diff
Diff
Patch
(5.84 KB, patch)
2012-07-13 03:14 PDT
,
Mary Wu
rwlbuis
: review+
Details
Formatted Diff
Diff
patch with const
(5.85 KB, patch)
2012-07-13 08:04 PDT
,
Joe Mason
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mary Wu
Comment 1
2012-07-11 04:59:45 PDT
Created
attachment 151684
[details]
Patch
Joe Mason
Comment 2
2012-07-11 09:39:48 PDT
Comment on
attachment 151684
[details]
Patch What's the rationale behind overwriting m_status with a less-specific value on close? Why couldn't the wrapped stream query the existing status?
Mary Wu
Comment 3
2012-07-11 18:43:51 PDT
(In reply to
comment #2
)
> (From update of
attachment 151684
[details]
) > What's the rationale behind overwriting m_status with a less-specific value on close?
Right now nobody would use the status() except download client who only cares if it's success or network error.
> Why couldn't the wrapped stream query the existing status?
There's some cases like StatusTooManyRedirects, wrapped stream would be unable to get the status.
Rob Buis
Comment 4
2012-07-12 07:48:33 PDT
Comment on
attachment 151684
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=151684&action=review
Looks good.
> Source/WebCore/platform/network/blackberry/NetworkJob.cpp:483 > + m_status = isError(m_extendedStatusCode) ? BlackBerry::Platform::FilterStream::StatusNetworkError: BlackBerry::Platform::FilterStream::StatusSuccess;
Style nit, please add a space before ':'
Joe Mason
Comment 5
2012-07-12 07:57:43 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 151684
[details]
[details]) > > What's the rationale behind overwriting m_status with a less-specific value on close? > > Right now nobody would use the status() except download client who only cares if it's success or network error.
In that case can you add a separate "closeStatus" that the download client could check? (I'm not sure what the best name is.) The idea is that the status provided to notifyClose says whether the underlying stream was actually able to connect to its endpoint or not (so if it closes without ever connecting, you get notifyClose with an error code immediately) and the status in notifyStatusReceived is sent by the endpoint. Whenever possible we put a detailed failure status in notifyStatusReceived as well as in notifyClose, but sometimes it's not possible so notifyClose is the fallback. For example, if making a request to an http:// url, if the connection fails we may get notifyStatusReceived with a network error and then notifyClose with a network error, or just notifyClose (actually I forget the exact circumstance where notifyClose can happen without notifyStatusReceived, but it's theoretically possible). If the connection succeeds but the server returns a 404, we get notifyStatusReceived(404) followed by notifyClose(Success). I'd prefer to have a separate method that the download client can call which returns exactly the pass/fail status the download client is looking for rather than changing the behaviour of status.
Lyon Chen
Comment 6
2012-07-12 08:20:03 PDT
(In reply to
comment #5
)
> In that case can you add a separate "closeStatus" that the download client could check? (I'm not sure what the best name is.) > > The idea is that the status provided to notifyClose says whether the underlying stream was actually able to connect to its endpoint or not (so if it closes without ever connecting, you get notifyClose with an error code immediately) and the status in notifyStatusReceived is sent by the endpoint. Whenever possible we put a detailed failure status in notifyStatusReceived as well as in notifyClose, but sometimes it's not possible so notifyClose is the fallback. > > For example, if making a request to an http:// url, if the connection fails we may get notifyStatusReceived with a network error and then notifyClose with a network error, or just notifyClose (actually I forget the exact circumstance where notifyClose can happen without notifyStatusReceived, but it's theoretically possible). If the connection succeeds but the server returns a 404, we get notifyStatusReceived(404) followed by notifyClose(Success). > > I'd prefer to have a separate method that the download client can call which returns exactly the pass/fail status the download client is looking for rather than changing the behaviour of status.
I remember there should be only one status, that is the http status, plus some internal error (which are negative to differentiated from normal http status). And this status is from notifyStatusReceived(). And the when merging WebSocket stream, we get separate status, notifyStatusReceived is now all about the connection establishment. And notifyClose() now comes a new status to tell status after the connection is established, like why it is closed, maybe due to some error (like lost network connection, the other end is down, etc). So I would suggest we still treat them all as one status: * It defaults to Success; * When notifyStatusReceived() comes, it changes to what is in it; * When notifyClose() comes, if it is Success, leave the status untouched, but if it is anything other than Success, then switch to new status. * when NetworkJob::status() is called, we always return what is saved in m_status.
Joe Mason
Comment 7
2012-07-12 13:38:44 PDT
(In reply to
comment #6
)
> I remember there should be only one status, that is the http status, plus some internal error (which are negative to differentiated from normal http status). And this status is from notifyStatusReceived(). > > And the when merging WebSocket stream, we get separate status, notifyStatusReceived is now all about the connection establishment. And notifyClose() now comes a new status to tell status after the connection is established, like why it is closed, maybe due to some error (like lost network connection, the other end is down, etc).
You're correct! I was remembering the close status completely wrong. Ignore my last comment.
> So I would suggest we still treat them all as one status: > > * It defaults to Success; > * When notifyStatusReceived() comes, it changes to what is in it; > * When notifyClose() comes, if it is Success, leave the status untouched, but if it is anything other than Success, then switch to new status. > * when NetworkJob::status() is called, we always return what is saved in m_status.
So that would just change line 483 in the patch to: m_status = isError(status) ? status : m_status; Sounds good to me! I believe that would fix the StatusTooManyRedirects case: m_extendedStatus gets set right before that line, and then gets overwritten with another error if one happens (which is fine, the close error is more important.) Except - wait a minute. How does this patch even apply? There is not "m_status" in NetworkJob.cpp, only m_extendedStatus.
Lyon Chen
Comment 8
2012-07-12 13:43:41 PDT
(In reply to
comment #7
)
> > Except - wait a minute. How does this patch even apply? There is not "m_status" in NetworkJob.cpp, only m_extendedStatus.
m_status is a FilterStream protected member variable added in platform patch, so it should be fine. Thought personally I would prefer not adding m_status to FilterStream, I think it should be just added to stream that maintain a status, like NetworkJob, DownloadFilterStream, or whatever stream that wants to maintain a status for the whole stream chain.
Mary Wu
Comment 9
2012-07-13 02:23:20 PDT
> So that would just change line 483 in the patch to:
> m_status = isError(status) ? status : m_status;
Thanks for review, Joe. So with this change the m_status will possible be HTTP code or PlatformStatus.
Mary Wu
Comment 10
2012-07-13 03:14:21 PDT
Created
attachment 152204
[details]
Patch
Joe Mason
Comment 11
2012-07-13 07:27:38 PDT
Comment on
attachment 152204
[details]
Patch Internally reviewed by myself and Lyon.
Rob Buis
Comment 12
2012-07-13 07:44:56 PDT
Comment on
attachment 152204
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=152204&action=review
Looks good.
> Source/WebCore/platform/network/blackberry/NetworkJob.h:83 > + virtual int status() { return m_extendedStatusCode; }
Could be const.
> Source/WebCore/platform/network/blackberry/SocketStreamHandle.h:60 > + virtual int status() { return m_status; }
Could be const.
Joe Mason
Comment 13
2012-07-13 08:04:47 PDT
Created
attachment 152264
[details]
patch with const Good catch. I'll go ahead and make that change since Mary's in Beijing and there's no sense in waiting another 12 hours.
Rob Buis
Comment 14
2012-07-13 08:08:08 PDT
Comment on
attachment 152264
[details]
patch with const Thanks Joe, looks fine now.
WebKit Review Bot
Comment 15
2012-07-13 10:40:13 PDT
Comment on
attachment 152264
[details]
patch with const Clearing flags on attachment: 152264 Committed
r122604
: <
http://trac.webkit.org/changeset/122604
>
WebKit Review Bot
Comment 16
2012-07-13 10:40:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug