[BlackBerry] Some small changes in network code https://bugs.webkit.org/show_bug.cgi?id=90974

Reviewed by Rob Buis.

1. Set status in NetworkJob/SocketStreamHandleBlackBerry so that
its wrapped stream can also query the stream result.
2. pass download attribute to NetworkRequest.

RIM PR# 171555
Reviewed internally by Lyon Chen and Joe Mason.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::handleNotifyClose):
* platform/network/blackberry/NetworkJob.h:
(WebCore::NetworkJob::status):
* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::platformTargetTypeForRequest):
* platform/network/blackberry/SocketStreamHandle.h:
(WebCore::SocketStreamHandle::status):
(SocketStreamHandle):
* platform/network/blackberry/SocketStreamHandleBlackBerry.cpp:
(WebCore::SocketStreamHandle::notifyStatusReceived):
(WebCore::SocketStreamHandle::notifyClose):


Canonical link: https://commits.webkit.org/109076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122604 268f45cc-cd09-0410-ab3c-d52691b4dbfc